objects/Credit_Check__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Credit Checks</relationshipLabel>
        <relationshipName>Credit_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BI_Score__c</fullName>
        <label>BI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Bankruptcy_Count__c</fullName>
        <label>Commercial Bankruptcy Count</label>
        <summaryForeignKey>Credit_Details__c.Credit_Check__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commercial_Bankruptcy__c</fullName>
        <formula>IF (Commercial_Bankruptcy_Count__c&gt;= 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Record_Type_Mapping__c</fullName>
        <label>Credit Check Record Type Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Credit Check</fullName>
                </value>
                <value>
                    <fullName>Owner Credit Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FICO__c</fullName>
        <label>FICO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lien_Amount__c</fullName>
        <label>Lien Amount</label>
        <summaryForeignKey>Credit_Details__c.Credit_Check__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy_Count__c</fullName>
        <label>Owner Bankruptcy Count</label>
        <summaryForeignKey>Credit_Details__c.Credit_Check__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy__c</fullName>
        <formula>IF (Owner_Bankruptcy_Count__c  &gt;= 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <referenceTo>Principal__c</referenceTo>
        <relationshipLabel>Credit Checks</relationshipLabel>
        <relationshipName>Credit_Checks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Check</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <recordTypes>
        <fullName>Business_Credit_Check</fullName>
        <active>true</active>
        <label>Business Credit Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Owner_Credit_Check</fullName>
        <active>true</active>
        <label>Owner Credit Check</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>